[gd_scene load_steps=12 format=3 uid="uid://bvhifu0m7tekn"]

[ext_resource type="Script" uid="uid://jk31iindsom8" path="res://Gamemanager.gd" id="1_x4av3"]
[ext_resource type="Resource" uid="uid://vvreu3hmla6g" path="res://Scenes/events/battle1.tres" id="2_8xkvn"]
[ext_resource type="Script" uid="uid://c6b8lhbdwp54s" path="res://Scenes/Deck/Deck.gd" id="2_rpqi1"]
[ext_resource type="Resource" uid="uid://d0xarx881qp0" path="res://Scenes/Deck/Characters/Test.tres" id="2_uxrcv"]
[ext_resource type="Resource" uid="uid://btqeuocl8vrmk" path="res://Scenes/events/ shop.tres" id="3_p5x2j"]
[ext_resource type="PackedScene" uid="uid://dgvw1d7m831c1" path="res://Scenes/Deck/HandUI.tscn" id="3_rpqi1"]
[ext_resource type="Resource" uid="uid://cg5c1o1alaif4" path="res://Scenes/events/random Ingredient.tres" id="4_p5x2j"]
[ext_resource type="PackedScene" uid="uid://diy7dm8wv1hs1" path="res://Scenes/TreyUI.tscn" id="5_rf2cd"]
[ext_resource type="Script" uid="uid://da63ybcmhufc5" path="res://PotionCombiner.gd" id="6_a814b"]
[ext_resource type="PackedScene" uid="uid://c2riw2te2tyyw" path="res://Scenes/Main Menu.tscn" id="7_5crlr"]
[ext_resource type="PackedScene" uid="uid://barykwtu30oa" path="res://Scenes/situationpicker.tscn" id="8_hbc2u"]

[node name="Gamemanager" type="Node"]
script = ExtResource("1_x4av3")
possible_events = Array[Resource]([ExtResource("2_8xkvn"), ExtResource("3_p5x2j"), ExtResource("4_p5x2j")])
potion_combiner = NodePath("PotionCombiner")
character_resource = ExtResource("2_uxrcv")

[node name="Deck" type="Node" parent="."]
script = ExtResource("2_rpqi1")

[node name="HandUi" parent="." instance=ExtResource("3_rpqi1")]
tray_ui_path = NodePath("../TrayUi")

[node name="TrayUi" parent="." instance=ExtResource("5_rf2cd")]
hand_ui_path = NodePath("../HandUi")

[node name="PotionCombiner" type="Node" parent="."]
script = ExtResource("6_a814b")

[node name="MainMenu" parent="." instance=ExtResource("7_5crlr")]
gamemanager = NodePath("..")

[node name="Situationpicker" parent="." instance=ExtResource("8_hbc2u")]
